# eurogate_fls26

./: .gitattributes  .gitignore  Makefile  README.md  baseline.py  pyproject.toml
CSV_Leaning /: CTH_Temperatur_Zentralgate  Okt 25 - 23 Feb 26.csv  CTH_Windrichtung_VC_Halle3  Okt 25 - 23 Feb 26.csv  CTH_Zentralgate_lean.csv  Leaner.py  Merger.py  open-meteo-Zentralgate.csv  open-meteo.csv  open-meteo_lean.csv
alternative_baselines/: decomposition_model.py  dft_decomp.py  knn_analog.py  linear_svm_baseline.py  lstm_baseline.py  physical_decomp.py  random_forest_baseline.py  sarimax_model.py  transformer_baseline.py
backend/: README.md  pyproject.toml
backend/app/: config.py  db.py  main.py  models.py
backend/app/routers/: analytics.py  container_data.py  containers.py  forecast.py
backend/legacy/: hamburg.html  index.html  map.css  map.js  script.js
backend/scripts/: build_database.py  train_and_predict.py
frontend/: build_database.py  generate_2week_forecast.py  generate_dashboard_data.py  generate_historical_viz_data.py  package-lock.json
lightgbm/: baseline.py  catboost_model.py  eval.py  honest_blend.py  hybrid_full_feature.py  productive.py  rf_richfeat.py  run_all.py  stacking.py  tune_blend.py  weather_external.py
outputs/: features_hourly.parquet  norm_stats.json  reefer_sequence.parquet  valid_scaled.parquet
participant_package/: reefer_release.csv  target_timestamps.csv
tft/: build_features.py  data_builder.py  eval.py  fit_norm_and_prepare.py  losses.py  model.py  target_scaler.py  train.py  utils.py
time_series_transformer/: model.py  (+1 more)
(+122 files in other folders)
